--- a/Views/Workout/ViewRoutine.cshtml
+++ b/Views/Workout/ViewRoutine.cshtml
@@ -78,6 +78,7 @@
         <div class="col-md-4 text-center">
             <form asp-action="StartRoutine" asp-controller="ExerciseTracking" method="post">
                 <input type="hidden" name="routineId" value="@Model.WorkoutRoutineId" />
+                <input type="hidden" name="localDayName" id="localDayName" value="" /> <!-- Hidden input for local day -->
                 <button type="submit" class="btn btn-primary btn-lg w-100" style="background-color: var(--bs-link-color); border-color: var(--bs-primary-border-subtle);">Start Routine</button>
             </form>
         </div>
@@ -166,6 +167,23 @@
 
 @section Scripts {
     <script type="text/javascript">
+
+        // When document loads, capture client timezone and local day.
+        $(document).ready(function () {
+            // Capture the user's time zone and local day
+            var timeZone = Intl.DateTimeFormat().resolvedOptions().timeZone;
+            var userDate = new Date();
+            var localDayName = userDate.toLocaleDateString("en-US", { weekday: 'long', timeZone: timeZone });
+
+            // Set the value of the hidden input for local day
+            $('#localDayName').val(localDayName);
+
+            // Log for debugging
+            console.log("Local Day Name: ", localDayName);
+            console.log("Time Zone: ", timeZone);
+        });
+
+
         function unlockExercise(exerciseId) {
             $('#exerciseName-' + exerciseId).prop('disabled', false);
             $('#sets-' + exerciseId).prop('disabled', false);
