update privacy page

--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -44,13 +44,8 @@
                         We may use third-party services that collect, monitor, and analyze data. These services have their own privacy policies, and we encourage you to read them.
                     </p>
 
-                    <h4 class="mt-4 text-emphasis-primary">5. Contact Us</h4>
-                    <p>
-                        If you have any questions about this Privacy Policy, please contact us at support@gymquest.com.
-                    </p>
-
                     <p class="mt-4">
-                        This Privacy Policy is effective as of [Date] and will remain in effect until further notice.
+                        This Privacy Policy is effective as of October 6th, 2024 and will remain in effect until further notice.
                     </p>
                 </div>
             </div>
